<resources>
    <string name="app_name">Tutlub</string>
    <string name="splash_title">Connect. Supplicate. Learn</string>
    <string name="facebook_app_id">1824825227543313</string>

    <string name="alternative_email_sign_up"><u>Alternative Email Sign up</u></string>
    <string name="mode_prayer_newbie">Prayer newbie</string>
    <string name="mode_prayer_2class">Prayer Master 2nd Class</string>
    <string name="mode_prayer_1class">Prayer Master 1st Class</string>
    <string name="mode_prayer_warrior">Prayer Warrior</string>
    <string name="mode_prayer_king">Prayer King/Queen</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="join_on_tutlub">Please, join me on Tutlub, the Lifestyle app for Professional Muslims http://bit.ly/tutlub-h</string>
    <string name="closing_tutlub">Closing TutLub</string>
    <string name="closing_message">Are you sure you want to close TutLub?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="amin">Amin</string>
    <string name="likers">Likes</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="label_like">Like</string>
    <string name="label_amin">Amin</string>
    <string name="label_shared">Shared</string>
    <string name="label_share">Share</string>
    <string name="tab_supplication">Supplication</string>
    <string name="tab_posts">Post</string>
    <string name="tab_friends">Friends</string>
    <string name="video_is_ready">Video is ready</string>
    <string name="video_not_ready">Video is not ready</string>
    <string name="no_video">No video for you =(</string>
    <string name="video_ad_id">ca-app-pub-1982284293283381/5479788558</string>
    <string name="video_loading">Video is loading...</string>
    <string name="label_points">Point :</string>
    <string name="label_your_points">Your point :</string>
    <string name="label_comment">Comment</string>
    <string name="ok">Ok</string>
    <string name="share_title">Tutlub</string>
    <string name="share_message">Please, join me on Tutlub, the Lifestyle app for Professional Muslims http://bit.ly/tutlub-h</string>
    <string name="share_url">http://bit.ly/tutlub-h</string>
    <string name="label_supplication">Supplication</string>
    <string name="activity_level_title">Tutlub Level</string>
    <string name="activity_news_title">NEWS</string>
    <string name="label_posts">Posts</string>
    <string name="label_friends">Friends</string>
    <string name="label_people">People</string>
    <string name="activity_settings">Settings</string>
    <string name="sms_body">Please, join me on Tutlub, the Lifestyle app for Professional Muslims http://bit.ly/tutlub-h</string>
    <string name="forgot_fill_in_all">Please, fill in all fields!</string>
    <string name="ads">ca-app-pub-1982284293283381~5957466552</string>
    <string name="email_address">Email address</string>
    <string name="new_password">New Password</string>
    <string name="create_new_password">CREATE NEW PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="change_your_cover_photo">Change your cover photo</string>
    <string name="basic_information">Basic Information</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="work_at">Work at</string>
    <string name="about_me">About me</string>
    <string name="save">Save</string>
    <string name="invite_friends">INVITE FRIENDS</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="sms">SMS</string>
    <string name="facebook">Facebook</string>
    <string name="with_each_10_friend">With each 10 friend invited you got additional 50 points to take you from tutlub newbie to prayer master level</string>
    <string name="skip">Skip</string>
    <string name="lets_get_started">LETS GET STARTED</string>
    <string name="invite_your_friends_to_start_learning_nand_supplicating_together_as_muslim_family">Invite your friends to start learning and supplicating together as muslim family</string>
    <string name="how_to_raise_your_level">How to raise your level:</string>
    <string name="_1_when_you_publish_a_post_you_get_one_1_point">1- When you publish a Post you get one (1) point.</string>
    <string name="_2_when_you_make_a_supplication_you_get_one_1_point">2- When you make a supplication you get one (1) point.</string>
    <string name="_3_when_you_like_a_post_you_get_one_1_point">3- When you Like a Post you get one (1) point.</string>
    <string name="_4_when_click_amin_on_a_supplication_you_get_one_1_point">4- When click Amin on a supplication you get one (1) point.</string>
    <string name="prayer_king_queen">PRAYER KING/QUEEN</string>
    <string name="_1001_points">1001 points</string>
    <string name="prayer_warrior">PRAYER WARRIOR</string>
    <string name="_500_1000_points">500-1000 points</string>
    <string name="prayer_master_1st_class">PRAYER MASTER 1st CLASS</string>
    <string name="_201_500_points">201-500 points</string>
    <string name="prayer_master_2nd_class">PRAYER MASTER 2nd CLASS</string>
    <string name="_51_200_points">51-200 points</string>
    <string name="prayer_newbie">PRAYER NEWBIE</string>
    <string name="_0_50_points">0-50 points</string>
    <string name="phone_number_email">Phone Number / Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="next">Next</string>
    <string name="search">Search</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="live_in">Live in:</string>
    <string name="email">Email</string>
    <string name="phone_number_is"><![CDATA[Phone number is used to create a secure account for you & to find your friends to supplicate and learn with. We will not display your phone number to other users]]></string>
</resources>
