<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="80dp"
        android:text="@string/invite_friends"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />


    <Button
        android:id="@+id/buttonWuP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:text="@string/whatsapp"
        android:textColor="#212121" />

    <Button
        android:id="@+id/buttonSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:text="@string/sms" />

    <Button
        android:id="@+id/buttonFaceBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:text="@string/facebook" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/with_each_10_friend"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:elevation="13dp"
            android:text="@string/skip"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

    </RelativeLayout>
</LinearLayout>